# Soft-String-Compare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
data_dummy/: all_list.txt  correct_list.txt  input_list.txt
soft_string_compare/: soft_string_compare.cpp  soft_string_compare.hh
